--- a/RMS.App/Views/Home/AboutDeveloper.cshtml
+++ b/RMS.App/Views/Home/AboutDeveloper.cshtml
@@ -8,14 +8,14 @@
 }
 <div class="table-success">
     <br/>
-    <h3 style="text-align: center" class="text-primary text-uppercase">About Developer</h3>
+    <h3 style="text-align: center" class="text-primary text-uppercase">Vehicle Management System (VMS) Developers</h3>
     <br/>
 </div>
 <hr/>
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            <h3 class=""> <i class="fa fa-group" aria-hidden="true"></i> Developers </h3>
+            <h4 class=""> <i class="fa fa-group" aria-hidden="true"></i>VMS Developers </h4>
             <br/>
             <a href="#" class="font-weight-light " data-toggle="collapse" data-target="#demo1"><i class="fa fa-address-card-o" aria-hidden="true"></i> Parvez Ahmed</a><br />
             <a href="#" class="font-weight-light " data-toggle="collapse" data-target="#demo2"><i class="fa fa-address-card-o" aria-hidden="true"></i> Masum Dollar</a><br/>
