--- a/RMS.App/Views/Home/Help.cshtml
+++ b/RMS.App/Views/Home/Help.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Help";
+    ViewBag.Title = "VMS Help";
     Layout = "~/Views/Shared/_LayoutLogIn.cshtml";
 }
 @section styles{
@@ -8,7 +8,7 @@
 }
 <div class="bg-primary">
     <br/>
-    <h3 style="text-align: center" class="text-light">Need help for product use?</h3>
+    <h3 style="text-align: center" class="text-light text-uppercase">Need help for VMS software use!</h3>
     <br/>
 </div>
 <hr/>
