--- a/RMS.App/Views/Account/ChangePassword.cshtml
+++ b/RMS.App/Views/Account/ChangePassword.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Change Password";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 
 
@@ -12,28 +12,33 @@
     @Html.AntiForgeryToken()
     <h4>Change Password Form</h4>
     <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
+    @Html.ValidationSummary(true,"", new { @class = "text-danger" })
+
     <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-3 control-label" })
+        <div class="col-md-9">
             @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m=>m.OldPassword,"",new {@class="text-danger"})
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-3 control-label" })
+        <div class="col-md-9">
             @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.NewPassword, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-3 control-label" })
+        <div class="col-md-9">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
+            <input type="submit" value="Change password" class="btn btn-default"/> &nbsp;
+            @Html.ActionLink("Back to profile", "Index", null, new { @class = "btn btn-outline-info" }) 
         </div>
     </div>
 }
