--- a/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
+++ b/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
@@ -13,94 +13,102 @@
 
         <div class="form-horizontal">
 
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.ValidationSummary(true, "", new {@class = "text-danger"})
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.FromPlace, htmlAttributes: new { @class = "control-label col-md-3" })
+                @Html.LabelFor(model => model.RequestFor, htmlAttributes: new {@class = "control-label col-md-3"})
                 <div class="col-md-9">
-                    @Html.EditorFor(model => model.FromPlace, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.FromPlace, "", new { @class = "text-danger" })
+                    @Html.DropDownList("EmployeeId", null, "Select", new {@class = "form-control searchableDD1"})
+                    @Html.ValidationMessageFor(model => model.EmployeeId, "", new {@class = "text-danger"})
                 </div>
             </div>
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.DestinationPlace, htmlAttributes: new { @class = "control-label col-md-3" })
+                @Html.LabelFor(model => model.FromPlace, htmlAttributes: new {@class = "control-label col-md-3"})
                 <div class="col-md-9">
-                    @Html.EditorFor(model => model.DestinationPlace, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.DestinationPlace, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.FromPlace, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.FromPlace, "", new {@class = "text-danger"})
                 </div>
             </div>
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.StartDateTime, htmlAttributes: new { @class = "control-label col-md-3" })
+                @Html.LabelFor(model => model.DestinationPlace, htmlAttributes: new {@class = "control-label col-md-3"})
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.DestinationPlace, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.DestinationPlace, "", new {@class = "text-danger"})
+                </div>
+            </div>
+
+            <div class="form-group row">
+                @Html.LabelFor(model => model.StartDateTime, htmlAttributes: new {@class = "control-label col-md-3"})
                 <div class="col-md-4">
-                    @Html.EditorFor(model => model.StartDateTime, new { htmlAttributes = new { @class = "form-control datePicker" } })
-                    @Html.ValidationMessageFor(model => model.StartDateTime, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.StartDateTime, new {htmlAttributes = new {@class = "form-control datePicker"}})
+                    @Html.ValidationMessageFor(model => model.StartDateTime, "", new {@class = "text-danger"})
                 </div>
 
-                @Html.LabelFor(model => model.StartTime, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.StartTime, htmlAttributes: new {@class = "control-label col-md-2"})
                 <div class="col-md-3">
-                    @Html.EditorFor(model => model.StartTime, new { htmlAttributes = new { @class = "form-control timePicker" } })
-                    @Html.ValidationMessageFor(model => model.StartTime, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.StartTime, new {htmlAttributes = new {@class = "form-control timePicker"}})
+                    @Html.ValidationMessageFor(model => model.StartTime, "", new {@class = "text-danger"})
                 </div>
             </div>
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.EndDateTime, htmlAttributes: new { @class = "control-label col-md-3" })
+                @Html.LabelFor(model => model.EndDateTime, htmlAttributes: new {@class = "control-label col-md-3"})
                 <div class="col-md-4">
-                    @Html.EditorFor(model => model.EndDateTime, new { htmlAttributes = new { @class = "form-control datePicker" } })
-                    @Html.ValidationMessageFor(model => model.EndDateTime, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.EndDateTime, new {htmlAttributes = new {@class = "form-control datePicker"}})
+                    @Html.ValidationMessageFor(model => model.EndDateTime, "", new {@class = "text-danger"})
                 </div>
 
-                @Html.LabelFor(model => model.EndTime, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.EndTime, htmlAttributes: new {@class = "control-label col-md-2"})
                 <div class="col-md-3">
-                    @Html.EditorFor(model => model.EndTime, new { htmlAttributes = new { @class = "form-control timePicker" } })
-                    @Html.ValidationMessageFor(model => model.EndTime, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.EndTime, new {htmlAttributes = new {@class = "form-control timePicker"}})
+                    @Html.ValidationMessageFor(model => model.EndTime, "", new {@class = "text-danger"})
                 </div>
             </div>
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.PassengerQty, htmlAttributes: new { @class = "control-label col-md-3" })
+                @Html.LabelFor(model => model.PassengerQty, htmlAttributes: new {@class = "control-label col-md-3"})
                 <div class="col-md-4">
-                    @Html.EditorFor(model => model.PassengerQty, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.PassengerQty, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.PassengerQty, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.PassengerQty, "", new {@class = "text-danger"})
                 </div>
             </div>
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-3" })
+                @Html.LabelFor(model => model.RequisitionType, htmlAttributes: new {@class = "control-label col-md-3"})
                 <div class="col-md-9">
-                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group row">
-                @Html.LabelFor(model => model.RequestFor, htmlAttributes: new { @class = "control-label col-md-3" })
-                <div class="col-md-9">
-                    @Html.EditorFor(model => model.RequestFor, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.RequestFor, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group row">
-                @Html.LabelFor(model => model.RequisitionType, htmlAttributes: new { @class = "control-label col-md-3" })
-                <div class="col-md-9">
-
-                    @Html.RadioButtonFor(model => model.RequisitionType, "Personal")Personal
+                    
+                    @Html.RadioButtonFor(model => model.RequisitionType, "Official", new { @checked = "checked" }) Official
                     &nbsp; &nbsp; &nbsp;
 
-                    @Html.RadioButtonFor(model => model.RequisitionType, "Official")Official;
-                    @Html.ValidationMessageFor(model => model.RequisitionType, "", new { @class = "text-danger" })
+                    @Html.RadioButtonFor(model => model.RequisitionType, "Personal") Personal
+                    @Html.ValidationMessageFor(model => model.RequisitionType, "", new {@class = "text-danger"})
                 </div>
             </div>
+
+            <div class="form-group row">
+                @Html.LabelFor(model => model.Description, htmlAttributes: new {@class = "control-label col-md-3"})
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.Description, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.Description, "", new {@class = "text-danger"})
+                </div>
+            </div>
+
+            @*<div class="form-group row">
+                @Html.LabelFor(model => model.RequestFor, htmlAttributes: new {@class = "control-label col-md-3"})
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.RequestFor, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.RequestFor, "", new {@class = "text-danger"})
+                </div>
+            </div>*@
 
             <div class="form-group row">
                 <div class="col-md-3"></div>
                 <div class="col-md-9">
-                    <input type="submit" value="Create" class="btn btn-success" /> &nbsp;
+                    <input type="submit" value="Create" class="btn btn-success"/> &nbsp;
                     <a href="#" class="btn btn-warning" data-dismiss="modal">Cancel</a> &nbsp;
-                    @Html.ActionLink("Back to List", "Create", null, htmlAttributes: new { @class = "btn btn-info" })
+                    @Html.ActionLink("Back to List", "Create", null, htmlAttributes: new {@class = "btn btn-info"})
                 </div>
             </div>
         </div>
