--- a/RMS.App/Views/Requisitions/Index.cshtml
+++ b/RMS.App/Views/Requisitions/Index.cshtml
@@ -2,20 +2,21 @@
 
 @{
     ViewBag.Title = "All Requisitions";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    //Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @section styles
 {
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
-    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet"/>
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
 
-    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />
 
 }
 <h2>All Requisitions</h2>
 <hr/>
 
 <div class="container">
+ 
 
     @if (TempData["msg"] != null)
     {
@@ -27,7 +28,7 @@
         <div class="row align-items-center">
             <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
                 <p>
-                    @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-success" })
+                    @Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-success"})
                 </p>
             </div>
 
@@ -44,166 +45,134 @@
         </div>
     </div>
     <br/>
-    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
-        <thead>
-            <tr class="bg-info">
-                <td>
-                    SL
-                </td>
-                <th>
-                    @Html.DisplayNameFor(model => model.RequisitionNumber)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Employee.FullName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Employee.Designation)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.FromPlace)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.DestinationPlace)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.StartDateTime)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.EndDateTime)
-                </th>
-                
-                <th>
-                    @Html.DisplayNameFor(model => model.RequestFor)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PassengerQty)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model=>model.SubmitDateTime)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Description)
-                </th>
-                <td>
-                    @Html.DisplayNameFor(model=>model.RequisitionType)
-                </td>
-                @*<th>
-                    Action
-                </th>*@
-            </tr>
-        </thead>
-        <tbody>
-        @{
-            var sl = 0;
-            if (Model.Count() != 0)
-            {
-                foreach (var item in Model)
-                {
-                    sl++;
-                    <tr>
-                        <td>
-                            @sl
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.RequisitionNumber)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Employee.FullName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Employee.Designation.Title)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.FromPlace)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.DestinationPlace)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.StartDateTime)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.EndDateTime)
-                        </td>
-                        
-                        <td>
-                            @Html.DisplayFor(modelItem => item.RequestFor)
-                        </td>
-                        <th>
-                            @Html.DisplayFor(modelItem => item.PassengerQty)
-                        </th>
-                        <th>
-                            @Html.DisplayFor(modleItem=>item.SubmitDateTime)
-                        </th>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Description)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.RequisitionType)
-                        </td>
-                        @*<td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-outline-danger btn-sm" })
-                        </td>*@
-                    </tr>
-                }
-            }
-            else
-            {
-                <tr>
-                    <td class="text-center text-danger" colspan="9"> Data Not Found!</td>
+    <div class="row">
+        <table id="example1" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
+            <thead>
+                <tr class="bg-info">
+                    <td>
+                        SL
+                    </td>
+                    <th>
+                        @Html.DisplayNameFor(model => model.RequisitionNumber)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Employee.FullName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Employee.Designation)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.FromPlace)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.DestinationPlace)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.StartDateTime)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.EndDateTime)
+                    </th>
+
+                    
+                    @*<th>
+                            Action
+                        </th>*@
                 </tr>
-            }
-        }
-        </tbody>
-        <tfoot>
-            <tr class="bg-secondary text-white">
-                <td>
-                    SL
-                </td>
-                <th>
-                    @Html.DisplayNameFor(model => model.RequisitionNumber)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Employee.FullName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Employee.Designation)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.FromPlace)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.DestinationPlace)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.StartDateTime)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.EndDateTime)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.RequestFor)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PassengerQty)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.SubmitDateTime)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Description)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.RequisitionType)
-                </th>
-                @*<th>
-                    Action
-                </th>*@
-            </tr>
-        </tfoot>
-    </table>
+            </thead>
+            <tbody>
+                @{
+                    var sl = 0;
+                    if (Model.Count() != 0)
+                    {
+                        foreach (var item in Model)
+                        {
+                            sl++;
+                            <tr>
+                                <td>
+                                    @sl
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.RequisitionNumber)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Employee.FullName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Employee.Designation.Title)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.FromPlace)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.DestinationPlace)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.StartDateTime)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.EndDateTime)
+                                </td>
+
+                               
+                                @*<td>
+                                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
+                                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
+                                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-outline-danger btn-sm" })
+                                    </td>*@
+                                <td>
+
+                                    @Html.ActionLink("Feedback", "Feedback", new { requisitionId = item.Id })
+                                </td>
+                            </tr>
+                        }
+                    }
+                    else
+                    {
+                        <tr>
+                            <td class="text-center text-danger" colspan="9"> Data Not Found!</td>
+                        </tr>
+                    }
+                }
+            </tbody>
+            <tfoot>
+                <tr class="bg-secondary text-white">
+                    <td>
+                        SL
+                    </td>
+                    <th>
+                        @Html.DisplayNameFor(model => model.RequisitionNumber)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Employee.FullName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Employee.Designation)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.FromPlace)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.DestinationPlace)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.StartDateTime)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.EndDateTime)
+                    </th>
+                    
+                    <th>
+                        @Html.DisplayNameFor(model => model.SubmitDateTime)
+                    </th>
+                    
+                    @*<th>
+                            Action
+                        </th>*@
+                </tr>
+            </tfoot>
+        </table>
+    </div>
 </div>
 @section scripts
 {
@@ -215,9 +184,10 @@
     <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
 
+
     <script>
         $(document).ready(function () {
-            $('#example').DataTable();
+            $('#example1').DataTable();
         });
     </script>
 }
