--- a/RMS.App/Views/Requisitions/Reply.cshtml
+++ b/RMS.App/Views/Requisitions/Reply.cshtml
@@ -36,7 +36,7 @@
         <div class="form-group row">
             <div class="col-md-5">
                 <input type="submit" value="Reply" class="btn btn-primary"/> &nbsp;
-                @Html.ActionLink("Back to List", "Create", "Requisitions", null, new {@class = "btn btn-info"})
+                @Html.ActionLink("Back to List", "RequisitionList", "Requisitions", null, new {@class = "btn btn-info"})
             </div>
         </div>
     </div>
